# spot-micro-controller

./: README.md  environment.yml  pyproject.toml
spot_micro_arduino/: spot_micro_arduino.ino
spot_micro_pi/: run.py
spot_micro_pi/servo/: api.py  i2c_device.py  i2c_struct.py  servo.py
